# Trilateration

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  antmac.sh  antwin.bat  build.xml
scripts/ant/: Mac.properties  Mac.xml  vc11.xml  win.properties  win.xml
scripts/cmake/: mac.cmake  prepmacos.sh  prepvc11.cmd  prepwin.cmd  win.cmake
source/: CMakeLists.txt  Position.cpp  Position.h  Public.cpp  Public.h  Trilateration.cpp  Trilateration.h
source/trilateration.test/: CMakeLists.txt  TrilaterationTest.cpp
